# AI_hedge_fund

./: README.md  pyproject.toml
app/backend/: db.py  main.py  scheduler.py
app/backend/alembic/versions/: 2032c26c7c1b_add_fundamentals_table.py  2f8c5d9e4b1a_add_hedgefundflowrun_table.py  5274886e5bee_add_hedgefundflow_table.py  acefa0d1d432_enable_pgvector_and_create_themes_idx.py  e68821e133c3_add_alerts_table.py
app/backend/cli/: load_data.py
app/backend/database/: __init__.py  connection.py  init_sample_data.py  models.py
app/backend/models/: __init__.py  schemas.py  stock.py
app/backend/repositories/: __init__.py  alert_repository.py  stock_repository.py  theme_repository.py
app/backend/routes/: __init__.py  alerts.py  backtest.py  scan.py  theme.py
app/backend/rules/: achman.yml  buffett.yml  lynch.yml  parser.py  wood.yml
app/backend/services/: backtest.py  email.py  embedding.py  graph.py  scan.py  sentiment.py
app/backend/tasks/: update_guru_stats.py
app/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
app/frontend/src/: App.tsx  index.css
app/frontend/src/components/: Layout.tsx  LegendarySelector.tsx  PatternPicker.tsx  StrategyBuilder.tsx  ThemeInput.tsx
app/frontend/src/components/__tests__/: LegendarySelector.test.tsx  PatternPicker.test.tsx  StrategyBuilder.test.tsx  ThemeInput.test.tsx
app/frontend/src/components/panels/: right-sidebar.tsx
app/frontend/src/components/panels/bottom/: bottom-panel.tsx
app/frontend/src/components/panels/left/: left-sidebar.tsx
app/frontend/src/components/panels/right/: right-sidebar.tsx
app/frontend/src/services/: api.ts
docker/: Dockerfile  docker-compose.yml
src/: main.py
src/data/: cache.py
src/tools/: api.py  valid_tickers.csv
src/utils/: analysts.py
tests/: test_alerts.py  test_backtest_service.py  test_cli_load_data.py  test_company_news_sentiment.py  test_strategy_scan.py  test_themes.py  test_ticker_validation.py  test_update_guru_stats.py
