[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
    { include = "app", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"

# ─── Core AI / LangChain stack ────────────────────────────────────────────────
langchain            = "0.3.0"
langchain-anthropic  = "0.3.5"
langchain-groq       = "0.2.3"
langchain-openai     = "^0.3.5"
langchain-deepseek   = "^0.1.2"
langchain-ollama     = "^0.2.0"
langgraph            = "0.2.56"
langchain-google-genai = "^2.0.11"

# ─── Data & maths ─────────────────────────────────────────────────────────────
pandas   = "^2.1.0"
numpy    = ">=1.26,<2.0"
matplotlib = "^3.9.2"

# ─── CLI / UX niceties ────────────────────────────────────────────────────────
tabulate   = "^0.9.0"
colorama   = "^0.4.6"
questionary = "^2.1.0"
rich       = "^13.9.4"

# ─── Backend web API  ─────────────────────────────────────────────────────────
fastapi    = { extras = ["standard"], version = "^0.104.0" }
fastapi-cli = "^0.0.7"
pydantic   = "^2.4.2"
httpx      = "^0.27.0"

# ─── Database / ORM ───────────────────────────────────────────────────────────
sqlalchemy = "^2.0.22"
alembic    = "^1.12.0"
sqlmodel   = "^0.0.14"
asyncpg    = "^0.30.0"
pgvector   = "^0.2.3"

# ─── Scheduling ───────────────────────────────────────────────────────────────
apscheduler = "^3.10.4"     # stays on latest v3.x

# ─── Finance / trading libs ───────────────────────────────────────────────────
yfinance = "^0.2.38"
vectorbt = "^0.28.0"        # core package only ─ no Telegram/APS pin

# ─── NLP / embeddings / feeds ────────────────────────────────────────────────
sentence-transformers = "^2.7.0"
feedparser            = "^6.0.10"

# ─── Cloud helpers ────────────────────────────────────────────────────────────
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black  = "^23.7.0"
isort  = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length    = 420
target-version = ['py311']
include        = '\.pyi?$'

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
